# vue3

./: Cargo.toml  Trunk.toml  index.html  style.css  tailwind.config.js  tailwind.css
src/: api.rs  lib.rs  main.rs  router.rs  store.rs
src/components/atoms/: bb_button.rs  bb_input.rs  bb_link.rs  mod.rs
src/components/molecules/: account_form.rs  mod.rs
src/components/organisms/: mod.rs  navbar.rs
src/pages/: create_accounts.rs  home.rs  login.rs  mod.rs
