[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.9.0"
reqwasm = "0.5.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
stylist = { version = "0.12.1", features = ["yew"]}
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "HtmlLiElement"] }
yew ={ version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.37"
yewdux = "0.9.0"

